matrix enableRegistration: true

--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -26,6 +26,8 @@ spec:
     publicServerName: "matrix.${SECRET_PUBLIC_DOMAIN}"
     wellknown:
       enabled: true
+    config:
+      enableRegistration: true
     postgresql:
       enabled: true
       existingSecret: matrix-synapse-secrets
