--- a/cluster/config/cluster-secrets.sops.yaml
+++ b/cluster/config/cluster-secrets.sops.yaml
@@ -12,6 +12,7 @@ stringData:
     SECRET_PARTNER_EMAIL: ENC[AES256_GCM,data:5DMNf5XIYtagL8LJMNJp3Zxjk+n2,iv:zysTh5rbWGHOPUJTugWycUAGam/zVg+n3UpJ9nRCIQI=,tag:7/th4qr8vHA9QZe82EeXCQ==,type:str]
     SECRET_LDAP_BASE_DN: ENC[AES256_GCM,data:oq4XtZ8Icl1pkQblYNxiDdY1lYtYhw==,iv://i3TmT2Z8sTfHQZEoh05gS75IjvLJ7/3N5JHKdC2/c=,tag:cVRIoag7WqZ8P/w+EVm8Og==,type:str]
     SECRET_SMTP_HOST: ENC[AES256_GCM,data:qMO3fsVw32pTqH7i874KbNO0LBE=,iv:BATmgVdh0waPmq7U6TAp1uw/w9LjuuQDSAL6LpXe2S8=,tag:PnBMl4YKwpG+7DxomPMn9w==,type:str]
+    SECRET_MATRIX_REGISTRATION_SHARED: ENC[AES256_GCM,data:H4lMTY61yKt92kZGdGNobELhvUgJvZ9VdwZS3MP4,iv:vxAHS9AfFVguSHk1wkbIOuD2b4dDaF/BAcrdlyAzlWI=,tag:N2C4IyZtiMeHjIk8xKp71Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -27,8 +28,8 @@ sops:
             THRId09ITEFvYzhUZTl2RXgycTRXK1kKXfg7tRrDVRpTMk0m//x44ii3QBBHzrxz
             TFE7Djgyh6VTRp5ub2VA/YOrskjpf0cD12MYwrt6q53PtNvapMK71Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-05-24T09:07:25Z"
-    mac: ENC[AES256_GCM,data:jyRzXs59kFdncInqllCrcACpRHS+1rGMXM9igWtP19sgFjuXP+GK4C1sR4EOFgddoMTL2Tuc0zq4BGh5NUNz0km0xqba0JqI3AhSIWVuPe8DvQOQTjByS3EUcQqTMvQ9yjbu6uxcTn7Bm6sN+3aYF3fKSea7ia72YGky6xlEdoQ=,iv:aocA5H41DzxZktd/BFtca4UFHTMfv/d/ZHZDaAI95B4=,tag:+GittlpPOraAP2o3kfpaqw==,type:str]
+    lastmodified: "2022-06-03T01:06:13Z"
+    mac: ENC[AES256_GCM,data:5akHGoojJu7hAQPyHWm4poyKtCPNbyPyJ9l2WeYoN0C7vua/B4HtF+Ca87Pq+gBW8iy7Nn4gmzouAlx9Q9/7Q1m1lKw9I/mJMWZW32FKzmCoUy+QNq3g9IF7xn2o/Hh8Sjs/oXymKm0ZTU84ReCK4poT6jsRbSXo07IvTc23UB8=,iv:piOI9B7ySnyS5+SwbU4lrNPatKOJUpNyxX/mjdiEMIg=,tag:J5jURc8Kd3vLIhupelI13w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
