--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -26,6 +26,7 @@ spec:
     publicServerName: "matrix.${SECRET_PUBLIC_DOMAIN}"
     wellknown:
       enabled: true
+      registrationSharedSecret: "${SECRET_MATRIX_REGISTRATION_SHARED}"
     postgresql:
       enabled: true
       existingSecret: matrix-synapse-secrets
