hostname for uptime kuma

--- a/cluster/apps/default/uptime-kuma/helm-release.yaml
+++ b/cluster/apps/default/uptime-kuma/helm-release.yaml
@@ -23,6 +23,7 @@ spec:
       tag: "latest"
     env:
       TZ: "${TIMEZONE}"
+      UPTIME_KUMA_HOST: "${SECRET_PUBLIC_DOMAIN}"
     persistence:
       config:
         enabled: true
