trying another way to do readiness probe

--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -22,8 +22,9 @@ spec:
     image:
       repository: matrixdotorg/synapse
       tag: v1.60.0
-    readinessProbe:
-      initialDelaySeconds: 120 # increase time to allow startup
+    synapse:
+      readinessProbe:
+        initialDelaySeconds: 120 # increase time to allow startup
     serverName: "matrix.${SECRET_PUBLIC_DOMAIN}"
     publicServerName: "matrix.${SECRET_PUBLIC_DOMAIN}"
     wellknown:
