adding kube-vip to manage with flux

--- a/cluster/config/cluster-settings.yaml
+++ b/cluster/config/cluster-settings.yaml
@@ -13,3 +13,5 @@ data:
   UNIFI_IP: "10.93.149.58"
   OCTOPRINT_IP: "10.93.149.56"
   TIMEZONE: "Pacific/Auckland"
+  FLANNEL_IFACE: "eth0"
+  APISERVER_ENDPOINT: "10.87.42.0"
