--- a/cluster/apps/default/jellyfin/helm-release.yaml
+++ b/cluster/apps/default/jellyfin/helm-release.yaml
@@ -4,7 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: jellyfin
-  namespace: media
+  namespace: default
 spec:
   interval: 5m
   chart:
