disable metallb and kube-system to recover cluster

--- a/cluster/core/kustomization.yaml
+++ b/cluster/core/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - cert-manager
   - namespaces
   - longhorn-system
-  - metallb-system
-  - kube-system
+  # - metallb-system
+  # - kube-system
