--- a/cluster/apps/auth/authelia/helm-release.yaml
+++ b/cluster/apps/auth/authelia/helm-release.yaml
@@ -43,6 +43,8 @@ spec:
         entryPoints: 
           - websecure
     pod:
+      kind: Deployment
+      replicas: 1
       env:
       - name: TZ
         value: "${TIMEZONE}"
