longhorn default replica count 4

--- a/cluster/core/longhorn-system/helm-release.yaml
+++ b/cluster/core/longhorn-system/helm-release.yaml
@@ -24,3 +24,4 @@ spec:
   values:
     defaultSettings:
       backupTarget: "nfs://${NAS0_IP}:/volume1/backups/longhorn"
+      defaultReplicaCount: 4
