meddling with longorn ui

--- a/cluster/core/longhorn-system/helm-release.yaml
+++ b/cluster/core/longhorn-system/helm-release.yaml
@@ -25,3 +25,5 @@ spec:
     defaultSettings:
       backupTarget: "nfs://${NAS0_IP}:/volume1/backups/longhorn"
       defaultReplicaCount: 4
+    longhornUI:
+      replicas: 3
