use existsin g vol vaultwarden

--- a/cluster/apps/default/vaultwarden/helm-release.yaml
+++ b/cluster/apps/default/vaultwarden/helm-release.yaml
@@ -36,5 +36,6 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        existingClaim: pvc-vaultwarden
         mountPath: /config
         retain: true
