--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -23,8 +23,8 @@ spec:
       tag: 1.26.0
     env:
       TZ: "${TIMEZONE}"
-      ZIGBEE2MQTT_CONFIG_SERIAL_PORT: /dev/ttyACM0
-      ZIGBEE2MQTT_CONFIG_SERIAL_ADAPTER: deconz
+      # ZIGBEE2MQTT_CONFIG_SERIAL_PORT: /dev/ttyACM0
+      # ZIGBEE2MQTT_CONFIG_SERIAL_ADAPTER: deconz
       # ZIGBEE2MQTT_CONFIG_MQTT_SERVER: mqtt://mosquitto.default.svc.cluster.local:1883
       # ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_LEVEL: debug
     config:
