intel gpu plugin

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -26,6 +26,9 @@ spec:
     remediation:
       retries: 3
   values:
+    deployment:
+      kind: Deployment
+      replicas: 3
     service:
       enabled: true
       type: LoadBalancer
