--- a/cluster/core/kube-system/intel-gpu-plugin/kustomization.yaml
+++ b/cluster/core/kube-system/intel-gpu-plugin/kustomization.yaml
@@ -2,5 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - kube-vip
-  - intel-gpu-plugin
+  - helm-release.yaml
