back to pvc-sonarr

--- a/cluster/apps/default/sonarr/helm-release.yaml
+++ b/cluster/apps/default/sonarr/helm-release.yaml
@@ -27,7 +27,7 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
-        # existingClaim: pvc-sonarr
+        existingClaim: pvc-sonarr
         mountPath: /config
         retain: true
       tv:
