--- a/cluster/apps/default/sabnzbd/helm-release.yaml
+++ b/cluster/apps/default/sabnzbd/helm-release.yaml
@@ -27,7 +27,7 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
-        # existingClaim: pvc-sabnzbd
+        existingClaim: pvc-sabnzbd
         mountPath: /config
         retain: true
       downloads:
