trigger new grafana vol

--- a/cluster/apps/default/grafana/helm-release.yaml
+++ b/cluster/apps/default/grafana/helm-release.yaml
@@ -21,7 +21,8 @@ spec:
     persistence:
       enabled: true
       storageClass: longhorn
-      existingClaim: pvc-grafana
+      # existingClaim: pvc-grafana
+      retain: true
     admin: 
       existingSecret: grafana-secrets
       userKey: admin-user
