--- a/cluster/core/cert-manager/issuers/letsencrypt-staging.yaml
+++ b/cluster/core/cert-manager/issuers/letsencrypt-staging.yaml
@@ -5,6 +5,9 @@ metadata:
   name: letsencrypt-staging
 spec:
   acme:
+    dependsOn:
+    - name: cert-manager
+      namespace: cert-manager
     server: https://acme-staging-v02.api.letsencrypt.org/directory
     email: "${SECRET_ADMIN_EMAIL}"
     privateKeySecretRef:
