--- a/cluster/apps/default/grafana/helm-release.yaml
+++ b/cluster/apps/default/grafana/helm-release.yaml
@@ -18,6 +18,11 @@ spec:
   install:
     createNamespace: true
   values:
+    replicas: 1
+    deploymentStrategy:
+      type: Recreate
+    image:
+      repository: ghcr.io/k8s-at-home/grafana
     persistence:
       enabled: true
       storageClass: longhorn
