vol for uptime-kuma

--- a/cluster/apps/default/uptime-kuma/helm-release.yaml
+++ b/cluster/apps/default/uptime-kuma/helm-release.yaml
@@ -27,5 +27,6 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        existingClaim: pvc-uptime-kuma
         mountPath: /app/data
         retain: true
