existing claim hass

--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -27,6 +27,7 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        existingClaim: pvc-home-assistant
         mountPath: /config
         retain: true
     addons:
