pvc-changedetection-io

--- a/cluster/apps/default/changedetection-io/helm-release.yaml
+++ b/cluster/apps/default/changedetection-io/helm-release.yaml
@@ -27,5 +27,6 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        existingClaim: pvc-changedetection-io
         mountPath: /datastore
         retain: true
