env var for git token

--- a/.taskfiles/ClusterTasks.yaml
+++ b/.taskfiles/ClusterTasks.yaml
@@ -27,7 +27,9 @@ tasks:
   flux:install:
     desc: Install Flux into your cluster, run this again if it fails
     cmds:
-      - flux bootstrap github --owner={{.GIT_OWNER}} --repository={{.GIT_REPONAME}} --branch=main --path=cluster/base --personal --token-auth
+      - echo "dont forget to export GITHUB_TOKEN="
+      - flux bootstrap github --owner={{.GIT_OWNER}} --repository={{.GIT_REPONAME}} --branch=main --path=cluster/base --personal
+      # --token-auth
       # - kubectl apply -k {{.CLUSTER_DIR}}/base/flux-system
     vars:
       GIT_OWNER: lucidph3nx
