--- a/cluster/crds/metallb/crds.yaml
+++ b/cluster/crds/metallb/crds.yaml
@@ -1,6 +1,4 @@
 ---
-
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -25,7 +23,7 @@ spec:
         # but we're going to set it later using the cert-controller.
         caBundle: Cg==
         service:
-          namespace: {{ .Release.Namespace }}
+          namespace: networking
           name: metallb-webhook-service
           path: /convert
   versions:
@@ -536,7 +534,7 @@ spec:
         # but we're going to set it later using the cert-controller.
         caBundle: Cg==
         service:
-          namespace: {{ .Release.Namespace }}
+          namespace: networking
           name: metallb-webhook-service
           path: /convert
   versions:
