--- a/cluster/apps/default/jellyfin/helm-release.yaml
+++ b/cluster/apps/default/jellyfin/helm-release.yaml
@@ -6,6 +6,9 @@ metadata:
   name: jellyfin
   namespace: default
 spec:
+  dependsOn:
+  - name: longhorn
+    namespace: longhorn-system
   interval: 5m
   chart:
     spec:
