--- a/cluster/apps/pihole/pihole/helm-values.yaml
+++ b/cluster/apps/pihole/pihole/helm-values.yaml
@@ -5,6 +5,9 @@ metadata:
   name: pihole
   namespace: pihole
 spec:
+  dependsOn:
+  - name: longhorn
+    namespace: longhorn-system
   interval: 15m
   chart:
     spec:
