--- a/cluster/apps/auth/postgresql/helm-release.yaml
+++ b/cluster/apps/auth/postgresql/helm-release.yaml
@@ -5,6 +5,9 @@ metadata:
   name: postgresql
   namespace: auth
 spec:
+  dependsOn:
+  - name: longhorn
+    namespace: longhorn-system
   interval: 5m
   chart:
     spec:
