--- a/cluster/apps/default/changedetection-io/helm-release.yaml
+++ b/cluster/apps/default/changedetection-io/helm-release.yaml
@@ -5,6 +5,9 @@ metadata:
   name: changedetection-io
   namespace: default
 spec:
+  dependsOn:
+  - name: longhorn
+    namespace: longhorn-system
   interval: 15m
   chart:
     spec:
