--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -5,6 +5,9 @@ metadata:
   name: plex
   namespace: default
 spec:
+  dependsOn:
+  - name: longhorn
+    namespace: longhorn-system
   interval: 5m
   chart:
     spec:
