--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -26,11 +26,11 @@ spec:
     env:
       TZ: "${TIMEZONE}"
       # PLEX_CLAIM: "claim-VkUiJdL5jwS-7zzDyyhH"
-    podSecurityContext:
-      supplementalGroups:
-      - 44
-      - 109
-      - 100
+    # podSecurityContext:
+    #   supplementalGroups:
+    #   - 44
+    #   - 109
+    #   - 100
     service:
       main:
         type: LoadBalancer
