--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -27,10 +27,14 @@ spec:
       TZ: "${TIMEZONE}"
       # PLEX_CLAIM: "claim-VkUiJdL5jwS-7zzDyyhH"
     podSecurityContext:
+      runAsUser: 568
+      runAsGroup: 568
+      fsGroup: 568
+      fsGroupChangePolicy: "OnRootMismatch"
       supplementalGroups:
-      runAsUser: 1000 #44
-      runAsGroup: 1000 #109
-      fsGroup: 1000 #100
+        - 44
+        - 109
+        - 100
     service:
       main:
         type: LoadBalancer
