remove null port zqm

--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -33,8 +33,8 @@ spec:
     config:
       homeassistant: true
       permit_join: false
-      serial:
-        port: null #/dev/ttyACM0
+      # serial:
+      #   port: null #/dev/ttyACM0
       mqtt:
         base_topic: zigbee2mqtt
         server: mqtt://mosquitto.default.svc.cluster.local:1883
