--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -36,6 +36,7 @@ spec:
       TZ: "${TIMEZONE}"
       PLEX_UID: 1000
       PLEX_GID: 1000
+      CHANGE_CONFIG_DIR_OWNERSHIP: false
       # PLEX_CLAIM: "claim-VkUiJdL5jwS-7zzDyyhH"
     podSecurityContext:
       runAsUser: 1000
