--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -26,8 +26,8 @@ spec:
       tag: 1.27.0
     env:
       TZ: "${TIMEZONE}"
-      # ZIGBEE2MQTT_CONFIG_SERIAL_PORT: /dev/ttyACM0
-      # ZIGBEE2MQTT_CONFIG_SERIAL_ADAPTER: deconz
+      ZIGBEE2MQTT_CONFIG_SERIAL_PORT: /dev/ttyACM0
+      ZIGBEE2MQTT_CONFIG_SERIAL_ADAPTER: deconz
       # ZIGBEE2MQTT_CONFIG_MQTT_SERVER: mqtt://mosquitto.default.svc.cluster.local:1883
       # ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_LEVEL: debug
     config:
@@ -35,7 +35,6 @@ spec:
       permit_join: false
       serial:
         port: null #/dev/ttyACM0
-        # port: /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2490275-if00
       mqtt:
         base_topic: zigbee2mqtt
         server: mqtt://mosquitto.default.svc.cluster.local:1883
@@ -74,6 +73,9 @@ spec:
  # trying to get the ConBee to appear as a readable ttyACM0 interface is a nightmare
  # this is mostly because I am using cloud init Ubuntu 20.04 images which are missing important usb things
  # find out the kernel version with `uname -a` then install extra modules
- # sudo apt install linux-modules-extra-5.4.0-91-generic
+ # sudo apt install linux-modules-extra-5.4.0-124-generic
  # https://arduino.stackexchange.com/questions/48583/no-ttyacm0-nor-ttyusb0
  # never forget the hours you spent, on more than one occasion, to fix this!!!
+
+ # this also includes when the kernel updates, you need to install the newer modules
+ # probably should look for a long term fix...
