--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
   values:
     image:
       repository: ghcr.io/k8s-at-home/plex
-      tag: v1.28.0.5999-97678ded3@sha256:ef756c7d784bd9e10da43a3da395e26cc283674dcb5d991cef9104572b37646e
+      tag: 1.28.1.6104-788f82488
       #plexinc/pms-docker
       # tag: 1.28.0.5999-97678ded3
     env:
