--- a/cluster/apps/default/plex/helm-release.yaml
+++ b/cluster/apps/default/plex/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
   values:
     image:
       repository: ghcr.io/k8s-at-home/plex
-      tag: 1.28.1.6104-788f82488
+      tag: v1.28.0.5999-97678ded3
       #plexinc/pms-docker
       # tag: 1.28.0.5999-97678ded3
     env:
