--- a/cluster/apps/networking/ingressroutes/hajimari-ingressroute.yaml
+++ b/cluster/apps/networking/ingressroutes/hajimari-ingressroute.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: changedetection-io-ingress
+  name: hajimari-ingress
   namespace: networking
   annotations:
     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
