--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -26,6 +26,7 @@ spec:
       defaultEnable: true
       namespaceSelector:
         matchNames:
+          - default
           - pihole
       groups:
         - name: procrastination
@@ -55,7 +56,22 @@ spec:
       create: true
     ingress:
       main:
-        enabled: false
+        enabled: true
+        ingressClassName: traefik
+        annotations:
+          cert-manager.io/cluster-issuer: letsencrypt-production
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+          external-dns/is-public: "true"
+        hosts:
+          - host: hajimari.${SECRET_DOMAIN}
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          - hosts:
+              - hajimari.${SECRET_DOMAIN}
+            secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
     data:
       enabled: false
     resources:
