allow ingress resources with traefik

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -38,6 +38,9 @@ spec:
       kubernetesCRD:
         allowExternalNameServices: true
         allowCrossNamespace: true
+      kubernetesIngress:
+        allowExternalNameServices: true
+        allowCrossNamespace: true
     ports:
       web:
         redirectTo: websecure
