--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -34,6 +34,10 @@ spec:
       type: LoadBalancer
       spec:
         loadBalancerIP: 10.87.42.10
+    ingressClass:
+      enabled: true
+      isDefaultClass: true
+      fallbackApiVersion: v1
     providers:
       kubernetesCRD:
         enabled: true
