try adding https-

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -71,7 +71,7 @@ spec:
                 pathType: Prefix
         tls:
           - hosts:
-              - hajimari.${SECRET_PUBLIC_DOMAIN}
+              - https-hajimari.${SECRET_PUBLIC_DOMAIN}
             secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
     data:
       enabled: false
