--- a/cluster/apps/networking/traefik/tls-store/default.yaml
+++ b/cluster/apps/networking/traefik/tls-store/default.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: networking
 spec:
   defaultCertificate:
-    secretName: "${SECRET_PUBLIC_DOMAIN//./-}-tls"
+    secretName: "${SECRET_PUBLIC_DOMAIN/./-}-tls"
