just to see if it makes any difference

--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -54,6 +54,7 @@ spec:
         allowCrossNamespace: true
         ingressClass: traefik
     globalArguments:
+      - "--api.insecure=true"
       - "--serversTransport.insecureSkipVerify=true"
       - "--providers.kubernetesingress.ingressclass=traefik"
     ports:
