--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -28,6 +28,7 @@ spec:
         matchNames:
           - default
           - pihole
+      name: "ben"
       groups:
         - name: procrastination
           links:
