--- a/cluster/config/cluster-settings.yaml
+++ b/cluster/config/cluster-settings.yaml
@@ -15,4 +15,5 @@ data:
   TIMEZONE: "Pacific/Auckland"
   FLANNEL_IFACE: "eth0"
   APISERVER_ENDPOINT: "10.87.42.0"
+  TRAEFIK_ENDPOINT: "10.87.42.10"
   METALLB_LB_RANGE: "10.87.42.10-10.87.42.20"
