--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -58,7 +58,7 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: traefik
+        # ingressClassName: traefik
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
